log
Wed, Apr 16, 2025  9:17:05 AM: 
 hashmap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:50:9: error: unused variable 'tamanoNuevo' [-Werror=unused-variable]
     int tamanoNuevo = 0;
         ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  9:17:17 AM: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
a704406
Wed, Apr 16, 2025  9:18:56 AM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9c9806d
Wed, Apr 16, 2025  9:19:51 AM: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  0|6
total_score: 0/70
4a8b65f
Wed, Apr 16, 2025  9:23:06 AM: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  0|0
e7da4ad
Wed, Apr 16, 2025  9:24:59 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0fba43d
